# stl_exercise

./: 1.duplicate_values.cpp  2.cheapest.cpp  3.even_odd.cpp  4.sum.cpp  5.percentiles.cpp  6.diff.cpp  7.slist.cpp  8.mastermind.cpp  CMakeLists.txt  Makefile  primes.corrupted.txt
